--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -660,9 +660,9 @@ import { ViewTransitions } from "astro:transitions";
     }
     #about-3-aleksandra-img {
         height: 32vw;
+        width: auto;
         margin-left: auto;
         align-self: center;
-        height: auto;
     }
 
 
@@ -874,6 +874,9 @@ import { ViewTransitions } from "astro:transitions";
     }
     .sideways-text-and-text h3 {
         font-size: clamp(1rem, 15vw, 10ch);
+    }
+    .quote-with-gradient-inside {
+        width: 240px;
     }
 /* about 7 - o nas - mobilne */
     .about-content-7 {
