Optymalizacja imgs o nas

--- a/src/components/en_components/About_cmpnt.astro
+++ b/src/components/en_components/About_cmpnt.astro
@@ -724,7 +724,7 @@ import { ViewTransitions } from "astro:transitions";
 /* Mobilna O nas */
 @media screen and (max-width: 800px) {
     .about-container {
-        grid-template-rows: auto auto 1fr 780px 360vw auto auto auto;
+        grid-template-rows: auto auto 1fr 780px auto auto auto auto;
     }
     .about-content-1 {
         flex-direction: column;    
@@ -835,6 +835,7 @@ import { ViewTransitions } from "astro:transitions";
     .about-content-5-klaudia-inside {
         flex-direction: column;
         width: 100vw;
+        height: auto;
     }
 
     #about-5-klaudia-img {
