Optymalizacja imgs plyty kontakt

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import kontaktImg from '../assets/kontakt.png';
 import fbIcon from '../assets/fb_icon.svg';
 import igIcon from '../assets/ig-kontakt.svg';
@@ -15,8 +16,8 @@ import { ViewTransitions } from "astro:transitions";
         <h3>Kontakt</h3>
         <a id="emailson" href="mailto:fantastica.ensemble@gmail.com" data-astro-reload>fantastica.ensemble@gmail.com</a>
         <div class="footer-social-icons-kontakt">
-            <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" /> <span>instagram</span></a>
-            <a href="https://www.facebook.com/fantastica.ensemble" class="footer-right-icon-container"><img class="footer-right-icon" src={fbIcon.src} alt="facebook" /> <span id="footer-right-text-fb">facebook</span></a>
+            <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><Image class="footer-right-icon" src={igIcon} alt="instagram" /> <span>instagram</span></a>
+            <a href="https://www.facebook.com/fantastica.ensemble" class="footer-right-icon-container"><Image class="footer-right-icon" src={fbIcon} alt="facebook" /> <span id="footer-right-text-fb">facebook</span></a>
         </div>
         <div class="footer-left">
             <h2>DOŁĄCZ DO NAS</h2>
@@ -26,7 +27,7 @@ import { ViewTransitions } from "astro:transitions";
             </form>
         </div>
     </div>
-    <img class="kontaktImg" src={kontaktImg.src} alt="" />
+    <Image class="kontaktImg" src={kontaktImg} alt="" />
 </div>
 
 <style>
