Optymalizacja imgs plyty kontakt

--- a/src/components/Kontant_cmpnt.astro
+++ b/src/components/Kontant_cmpnt.astro
@@ -27,7 +27,7 @@ import { ViewTransitions } from "astro:transitions";
             </form>
         </div>
     </div>
-    <Image class="kontaktImg" src={kontaktImg} alt="" />
+    <Image class="kontaktImg" src={kontaktImg} alt="" fetchpriority=high />
 </div>
 
 <style>
