Optymalizacja imgs plyty kontakt

--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -339,7 +339,7 @@ import { ViewTransitions } from "astro:transitions";
     #about-3-aleksandra-img {
         margin-left: calc(4vw);    
         height: auto;
-
+        width: auto;
     }
     /* Sekcja 4 aleksandra*/
     .about-content-4-aleksandra {
