--- a/src/components/Posluchaj_cmpnt.astro
+++ b/src/components/Posluchaj_cmpnt.astro
@@ -45,7 +45,7 @@ import { ViewTransitions } from "astro:transitions";
         </div>
         <div class="zobacz-na-zywo-embed">
 			<img class="naZywo" src={naZywo.src} alt="" />
-                <lite-youtube videoid="ZnTkeduqcbU" style="background-image: url('https://i.ytimg.com/vi/ZnTkeduqcbU/hqdefault.jpg'); max-width: none;">
+                <lite-youtube videoid="ZnTkeduqcbU" id="liteYt" style="background-image: url('https://i.ytimg.com/vi/ZnTkeduqcbU/hqdefault.jpg'); max-width: none;">
                     <a href="https://www.youtube.com/embed/ZnTkeduqcbU" class="lty-playbtn" title="Fantastica Ensemble">
                         <span class="lyt-visually-hidden">Fantastica Ensemble</span>
                     </a>
@@ -108,7 +108,7 @@ import { ViewTransitions } from "astro:transitions";
     .zobacz-na-zywo-container {
         display: grid;
         grid-template-columns: 1fr auto 1fr;
-        grid-template-rows: 18vh 1fr;
+        grid-template-rows: auto auto;
         height: 97vw;
 
         font-family: Elsie;
@@ -126,7 +126,7 @@ import { ViewTransitions } from "astro:transitions";
         grid-column: 2/3;
         grid-row-start: 2;
         text-align: center;
-        height: 12vh;
+        height: auto;
         margin-top: 25vh;
         position: relative;
     }
@@ -155,24 +155,34 @@ import { ViewTransitions } from "astro:transitions";
         .naZywo {
             width: 88vw;
         }
+        .zobacz-na-zywo p {
+            margin: 0 4vw 0 4vw;
+        }
+
         .zobacz-na-zywo-embed iframe {
             top: 2.5vw;
             width: 80vw;
             left: 8.4vw;
         }
+        
+        #liteYt {
+            width: 78vw;
+        }
     }
     @media screen and (max-width: 600px) {
         .posluchaj-container{
             width: 100%;
-            padding-bottom: 80vw;
+            padding-bottom: 55vw;
         }
         .posluchaj-socials {
             font-size: 18vw;
             margin-top: 60vw;
         }
         .zobacz-na-zywo-embed {
-            margin-top: 36vh;
+            /* margin-top: 36vh; */
         }
+
+
         .posluchaj-socials {
             margin-top: 30vw;
             height: min-content;
@@ -190,6 +200,10 @@ import { ViewTransitions } from "astro:transitions";
         .zobacz-na-zywo-container {
             grid-template-rows: 23vw 144vw;
         }
-        
+
+        #liteYt {
+            margin-left: 6.6vw;
+        }
     }
+
 </style>
