--- a/src/components/en_components/Posluchaj_cmpnt.astro
+++ b/src/components/en_components/Posluchaj_cmpnt.astro
@@ -44,7 +44,7 @@ import { ViewTransitions } from "astro:transitions";
         </div>
         <div class="zobacz-na-zywo-embed">
 			<img class="naZywo" src={naZywo.src} alt="" />
-                <lite-youtube videoid="ZnTkeduqcbU" style="background-image: url('https://i.ytimg.com/vi/ZnTkeduqcbU/hqdefault.jpg'); max-width: none;">
+                <lite-youtube videoid="ZnTkeduqcbU" id="liteYt" style="background-image: url('https://i.ytimg.com/vi/ZnTkeduqcbU/hqdefault.jpg'); max-width: none;">
                     <a href="https://www.youtube.com/embed/ZnTkeduqcbU" class="lty-playbtn" title="Fantastica Ensemble">
                         <span class="lyt-visually-hidden">Fantastica Ensemble</span>
                     </a>
@@ -111,7 +111,7 @@ import { ViewTransitions } from "astro:transitions";
     .zobacz-na-zywo-container {
         display: grid;
         grid-template-columns: 1fr auto 1fr;
-        grid-template-rows: 18vh 1fr;
+        grid-template-rows: auto auto;
         height: 97vw;
 
         font-family: Elsie;
@@ -129,7 +129,7 @@ import { ViewTransitions } from "astro:transitions";
         grid-column: 2/3;
         grid-row-start: 2;
         text-align: center;
-        height: 12vh;
+        height: auto;
         margin-top: 25vh;
         position: relative;
     }
@@ -141,6 +141,7 @@ import { ViewTransitions } from "astro:transitions";
         position: absolute;
         top: 3.5vw;
         left: 5vw;
+        height: auto;
         /* justify-self: anchor-center; */
         aspect-ratio: 65/39;
         width: 58vw;
@@ -157,12 +158,18 @@ import { ViewTransitions } from "astro:transitions";
         .naZywo {
             width: 88vw;
         }
+        .zobacz-na-zywo p {
+            margin: 0 4vw 0 4vw;
+        }
         .zobacz-na-zywo-embed iframe {
             top: 2.5vw;
             width: 80vw;
             left: 8.4vw;
         }
-    }
+
+        #liteYt {
+            width: 78vw;
+        }
 /* 
     #footerlol {
         height:  calc(42vh + 103px);
@@ -171,14 +178,14 @@ import { ViewTransitions } from "astro:transitions";
     @media screen and (max-width: 600px) {
         .posluchaj-container{
             width: 100%;
-            padding-bottom: 80vw;
+            padding-bottom: 55vw;
         }
         .posluchaj-socials {
             font-size: 18vw;
             margin-top: 60vw;
         }
         .zobacz-na-zywo-embed {
-            margin-top: 36vh;
+            /* margin-top: 36vh; */
         }
         .posluchaj-socials {
             margin-top: 30vw;
@@ -197,6 +204,14 @@ import { ViewTransitions } from "astro:transitions";
         .zobacz-na-zywo-container {
             grid-template-rows: 23vw 144vw;
         }
-        
+
+        #liteYt {
+            margin-left: 6.6vw;
+        }
     }
+    /* @media screen and (max-width: 420px) {
+        #liteYt {
+            margin-left: 6.6vw;
+        }
+    } */
 </style>
